<resources>
    <string name="app_name">SmartcardIO Demo</string>

    <string name="activity_main_label">SCIO Demo</string>
    <string name="activity_main_title">SmartcardIO Demo</string>
    <string name="activity_settings_label">SCIO Settings</string>
    <string name="activity_settings_title">SmartcardIO Settings</string>
    <string name="activity_about_label">About SmartcardIO</string>

    <string name="action_settings_title">Settings</string>
    <string name="action_about_title">About</string>

    <string name="pref_general_title">General</string>
    <string name="pref_stay_awake_title">Stay awake</string>
    <string name="pref_nfc_title">NFC</string>
    <string name="pref_use_nfc_title">Use NFC</string>
    <string name="pref_omapi_title">OMAPI</string>
    <string name="pref_use_omapi_title">Use OMAPI</string>

    <string name="card_info_title">Card</string>
    <string name="terminal_info_title">Terminal</string>
    <string name="button_dismiss_text">Dismiss</string>

    <string-array name="pref_stay_awake_titles">
        <item>System default</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>Indefinitely</item>
    </string-array>
    <string-array name="pref_stay_awake_values">
        <item>-1</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>0</item>
    </string-array>

</resources>
